# sp-allure

./: .gitignore  Dockerfile  README.md  conftest.py  index.html  pyproject.toml
.github/workflows/: sp-allure-basic.yml  sp-allure-gh-pages.yml  sp-allure.yml
1/: index.html
1/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  history.json  retry-trend.json
1/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
21/: index.html
21/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: categories-trend.json  duration-trend.json  history.json
21/widgets/: executors.json  status-chart.json  summary.json
22/: index.html
22/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: history.json
22/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  status-chart.json  summary.json
23/: index.html
23/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
last-history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
po/: landing_page.py
tests/: conftest.py  test_google.py  test_landing.py
(+112 files in other folders)
